# Udacity_Car_ND_2

./: README.md
2 Computer Vision/: Lesson 3.7.calibration.ipynb
2 Computer Vision/Lesson 2.07 Choosing Metrics/: iou.py  precision_recall.py
2 Computer Vision/Lesson 2.14  Data Acquisition and Visualization/: Untitled.ipynb  visualization.py
2 Computer Vision/Lesson 3.12 Image Manipulation/: masking.ipynb  masking.py  statistic.ipynb  statistics.py
2 Computer Vision/Lesson 4.08 Logistic Regression/: logistic.py
2 Computer Vision/Lesson 4.13 Stochastic Gradient Descent/: training.py
2 Computer Vision/Lesson 5.09 Pooling Layers/: pooling.py
2 Computer Vision/Lesson 5.16 Custom Architecture/: Untitled.ipynb  training.py
2 Computer Vision/Lesson 5.21 Augmentations/: solution.ipynb
2 Computer Vision/Lesson 6.12 Non-Max Suppression/: nms.py
2 Computer Vision/Lesson 6.16 Mean Average Precision/: map.py
2 Computer Vision/Lesson 6.24 Training Tips/: training.py
2 Computer Vision/Project/: Exploratory Data Analysis.ipynb  README.md  create_splits.py  download_process.py  tips.sh
2 Computer Vision/nd013-c1-vision-starter/: Exploratory Data Analysis.ipynb  writeup.md
3 Sensor Fusion/7. Multi TRacking/: 1_initialization.py  2_fov.py  3_association_matrix.py  (+1 more)
4 Localization/Lesson_3 _Markov_Localization/: CMakeLists.txt  helpers.h  main_3.27.cpp  main_3.34.cpp  main_3.36.cpp  main_3.38.cpp  main_3.8.cpp
5 Planning/Lesson 3. Motion planning/: CMakeLists.txt  main_15.cpp  main_27.cpp  main_33.cpp  main_9.cpp
docker/: Dockerfile  docker-compose.yml
(+60 files in other folders)
