cmake_minimum_required(VERSION 3.20)
project(4_Localization)

set(CMAKE_CXX_STANDARD 14)

add_executable(3.8_Localization main_3.8.cpp)
add_executable(3.27_Localization main_3.27.cpp)
add_executable(3.34_Localization main_3.34.cpp)
add_executable(3.36_Localization main_3.36.cpp)
add_executable(3.38_Localization main_3.38.cpp)
